--- a/Activity-1.01.html
+++ b/Activity-1.01.html
@@ -9,6 +9,7 @@
      <body>
         <h1>Lorem ipsum</h1>
         <p>
+          <h6>This is another header</6>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.         
         Nullam quis scelerisque mauris. Curabitur aliquam ligula         
         in erat placerat finibus. Mauris leo neque, malesuada         
